fix author page socials wrapping

--- a/frontend/src/styles/author-page.module.scss
+++ b/frontend/src/styles/author-page.module.scss
@@ -125,6 +125,13 @@ section.intro {
   }
 }
 
+.socials:global(.mantine-Group-root) {
+  --group-gap: var(--mantine-spacing-xs) !important;
+  @media (min-width: rem(1070)) {
+    --group-gap: var(--mantine-spacing-md) !important;
+  }
+}
+
 .name {
   display: block;
   text-align: center;
